index: Updating main description and sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,9 @@
         {% endfor %}
         
         <a class="sidebar-nav-item {% if page.url contains "blog/" %} active{% endif %}" href="/blog">My blog</a>
+        <a class="sidebar-nav-item" href="https://www.linkedin.com/in/OskarKlintrot">My LinkedIn profile</a>
+        <a class="sidebar-nav-item" href="https://github.com/OskarKlintrot">My Github account</a>
+        <a class="sidebar-nav-item" href="mailto:oskar.klintrot@gmail.com">Send me an email</a>
         <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
         <span class="sidebar-nav-item">Built with <a href="https://github.com/poole/hyde">Poole</a> v{{ site.version }}</span>
       </nav>
